--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,13 @@
 version: "3.8"
+
+volumes:
+  vol-emqx-data:
+    name: foo-emqx-data
+  vol-emqx-etc:
+    name: foo-emqx-etc
+  vol-emqx-log:
+    name: foo-emqx-log
+    
 services:
 
   emqx:
@@ -6,12 +15,19 @@ services:
     image: emqx/emqx:4.2.3
     restart: always
     ports: 
-      - ${emqxdashport}:18083
+      - 18083:18083
       - 8083:8083
     environment: 
-      
+
+      EMQX_NAME: omarrc-com
+      EMQX_HOST: 127.0.0.1
       #listener.tcp.external.max_connections
       EMQX_LISTENER__TCP__EXTERNAL__MAX_CONNECTIONS: 1000
+
+    volumes:
+      - vol-emqx-data:/opt/emqx/data
+      - vol-emqx-etc:/opt/emqx/etc
+      - vol-emqx-log:/opt/emqx/log
     
 
 
