--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ volumes:
     name: foo-emqx-etc
   vol-emqx-log:
     name: foo-emqx-log
-    
+
 services:
 
   emqx:
@@ -21,6 +21,10 @@ services:
 
       EMQX_NAME: omarrc-com
       EMQX_HOST: 127.0.0.1
+
+      TZ: "Mexico/General"
+      # DEFAULT DASH PAS
+      EMQX_DASHBOARD__DEFAULT__USER__PASSWORD: "emqxdashpass"
       #listener.tcp.external.max_connections
       EMQX_LISTENER__TCP__EXTERNAL__MAX_CONNECTIONS: 1000
 
