se agrego mongodb con pesistencia de datos, pass y user setiados

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,19 @@ volumes:
     name: foo-emqx-log
 
 services:
+  mongo:
+    container_name: mongo
+    image: mongo:4.4
+    restart: always
+    environment: 
+      TZ: "Mexico/General"
+      MONGO_INITDB_ROOT_USERNAME: "devuser"
+      MONGO_INITDB_ROOT_PASSWORD: "devpassword"
+    volumes: #persistencia de datos 
+      - ./mongodata:/data/db
+    ports: 
+      - 27017:27017
+
 
   emqx:
     container_name: emqx
