--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3.8"
 
 volumes:
-  vol-emqx-data:
-    name: foo-emqx-data
-  vol-emqx-etc:
-    name: foo-emqx-etc
-  vol-emqx-log:
-    name: foo-emqx-log
+  # vol-emqx-data:
+  #   name: foo-emqx-data
+  # vol-emqx-etc:
+  #   name: foo-emqx-etc
+  # vol-emqx-log:
+  #   name: foo-emqx-log
   mongodata: {}
 
 services:
@@ -22,6 +22,7 @@ services:
       - mongodata:/data/db #./mongodata:data/db no funciona en windows para comprartir archivos
     ports: 
       - 27017:27017
+    
 
 
   emqx:
@@ -29,8 +30,12 @@ services:
     image: emqx/emqx:4.2.3
     restart: always
     ports: 
-      - 18083:18083
+      - 18083:18083 #dash  sl
+      - 18084:18084 # dash ssl
+      - 1883:1883
       - 8083:8083
+      - 8084:8084
+      - 8085:8081
     environment: 
 
       EMQX_NAME: omarrc-com
@@ -41,11 +46,46 @@ services:
       EMQX_DASHBOARD__DEFAULT__USER__PASSWORD: "emqxdashpass"
       #listener.tcp.external.max_connections
       EMQX_LISTENER__TCP__EXTERNAL__MAX_CONNECTIONS: 1000
+      #EMQX.CONF
+      EMQX_ALLOW_ANONYMOUS: "false" #true deja entrar a cualquiera false no
+      EMQX_NOMATCH: "deny" # evita que el cliente se suscriba o publique en cualquier topico
+      #MONGO CONNECTION
+      EMQX_AUTH__MONGO__TYPE: single
+      EMQX_AUTH__MONGO__SERVER: "mongo:27017"
+      EMQX_AUTH__MONGO__POOL: 8
+      EMQX_AUTH__MONGO__LOGIN: "devuser"
+      EMQX_AUTH__MONGO__PASSWORD: "devpassword"
+      EMQX_AUTH__MONGO__AUTH_SOURCE: admin
 
-    volumes:
-      - vol-emqx-data:/opt/emqx/data
-      - vol-emqx-etc:/opt/emqx/etc
-      - vol-emqx-log:/opt/emqx/log
+      EMQX_AUTH__MONGO__DATABASE: "ioticos_god_level"
+      EMQX_AUTH__MONGO__AUTH_QUERY__COLLECTION:  "emqxauthrules"
+
+      EMQX_AUTH__MONGO__SUPER_QUERY__COLLECTION: "emqxauthrules"
+      EMQX_AUTH__MONGO__SUPER_QUERY__SUPER_FIELD: "is_superuser"
+      EMQX_AUTH__MONGO__SUPER_QUERY__SELECTOR: "username=%u"
+      EMQX_AUTH__MONGO__SUPER_QUERY: "off"
+
+      EMQX_AUTH__MONGO__AUTH_QUERY__PASSWORD_HASH: plain
+      EMQX_AUTH__MONGO__AUTH_QUERY__PASSWORD_FIELD: "password"
+      EMQX_AUTH__MONGO__AUTH_QUERY__SELECTOR: "username=%u"
+
+      # Enable ACL query
+
+      EMQX_AUTH__MONGO__ACL_QUERY: "on"
+      EMQX_AUTH__MONGO__ACL_QUERY__COLLECTION: "emqxauthrules"
+      EMQX_AUTH__MONGO__ACL_QUERY__SELECTOR: "username=%u"
+
+      #START PLUGINS
+      EMQX_LOADED_PLUGINS: "emqx_recon,emqx_retainer,emqx_management,emqx_dashboard,emqx_mongo"
+
+
+    # volumes:
+    #   - vol-emqx-data:/opt/emqx/data
+    #   - vol-emqx-etc:/opt/emqx/etc
+    #   - vol-emqx-log:/opt/emqx/log
+    
+    links: 
+      - mongo
     
 
 
