--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3.8"
 
 volumes:
-  # vol-emqx-data:
-  #   name: foo-emqx-data
+   vol-emqx-data:
+     name: foo-emqx-data
   # vol-emqx-etc:
   #   name: foo-emqx-etc
-  # vol-emqx-log:
-  #   name: foo-emqx-log
+   vol-emqx-log:
+     name: foo-emqx-log
   mongodata: {}
 
 services:
@@ -14,36 +14,44 @@ services:
     container_name: mongo
     image: mongo:4.4
     restart: always
-    environment: 
-      TZ: "Mexico/General"
-      MONGO_INITDB_ROOT_USERNAME: "devuser"
-      MONGO_INITDB_ROOT_PASSWORD: "devpassword"
-    volumes: #persistencia de datos 
+    environment:
+      TZ: "${TZ}"
+      MONGO_INITDB_ROOT_USERNAME: "${MONGO_USERNAME}" #devuser:devpassword@localhost:27017
+      MONGO_INITDB_ROOT_PASSWORD: "${MONGO_PASSWORD}"
+    volumes: #persistencia de datos
       - mongodata:/data/db #./mongodata:data/db no funciona en windows para comprartir archivos
-    ports: 
-      - 27017:27017
-    
-
+    ports:
+      - ${MONGO_EXT_PORT}:27017
 
   emqx:
     container_name: emqx
     image: emqx/emqx:4.2.3
     restart: always
-    ports: 
+    ports:
       - 18083:18083 #dash  sl
-      - 18084:18084 # dash ssl
       - 1883:1883
+      - 8883:8883
       - 8083:8083
-      - 8084:8084
       - 8085:8081
-    environment: 
+    volumes:
+      - vol-emqx-data:/opt/emqx/data
+    #  - vol-emqx-etc:/opt/emqx/etc
+      - vol-emqx-log:/opt/emqx/log
 
+    links:
+      - mongo
+    extra_hosts: #solucion temporal de desarrollo
+      - "localhost:192.168.0.202"
+
+    environment:
       EMQX_NAME: omarrc-com
       EMQX_HOST: 127.0.0.1
 
-      TZ: "Mexico/General"
+      TZ: "${TZ}"
       # DEFAULT DASH PAS
-      EMQX_DASHBOARD__DEFAULT__USER__PASSWORD: "emqxdashpass"
+      EMQX_DASHBOARD__DEFAULT__USER__PASSWORD: "${EMQX_DEFAULT_USER_PASSWORD}"
+      # DEFAULT API SECRET
+      EMQX_MANAGEMENT__DEFAULT_APPLICATION__SECRET: "${EMQX_DEFAULT_APPLICATION_SECRET}"
       #listener.tcp.external.max_connections
       EMQX_LISTENER__TCP__EXTERNAL__MAX_CONNECTIONS: 1000
       #EMQX.CONF
@@ -51,14 +59,14 @@ services:
       EMQX_NOMATCH: "deny" # evita que el cliente se suscriba o publique en cualquier topico
       #MONGO CONNECTION
       EMQX_AUTH__MONGO__TYPE: single
-      EMQX_AUTH__MONGO__SERVER: "mongo:27017"
+      EMQX_AUTH__MONGO__SERVER: "mongo:${MONGO_EXT_PORT}"
       EMQX_AUTH__MONGO__POOL: 8
-      EMQX_AUTH__MONGO__LOGIN: "devuser"
-      EMQX_AUTH__MONGO__PASSWORD: "devpassword"
+      EMQX_AUTH__MONGO__LOGIN: "${MONGO_USERNAME}"
+      EMQX_AUTH__MONGO__PASSWORD: "${MONGO_PASSWORD}"
       EMQX_AUTH__MONGO__AUTH_SOURCE: admin
 
       EMQX_AUTH__MONGO__DATABASE: "ioticos_god_level"
-      EMQX_AUTH__MONGO__AUTH_QUERY__COLLECTION:  "emqxauthrules"
+      EMQX_AUTH__MONGO__AUTH_QUERY__COLLECTION: "emqxauthrules"
 
       EMQX_AUTH__MONGO__SUPER_QUERY__COLLECTION: "emqxauthrules"
       EMQX_AUTH__MONGO__SUPER_QUERY__SUPER_FIELD: "is_superuser"
@@ -76,17 +84,8 @@ services:
       EMQX_AUTH__MONGO__ACL_QUERY__SELECTOR: "username=%u"
 
       #START PLUGINS
-      EMQX_LOADED_PLUGINS: "emqx_recon,emqx_retainer,emqx_management,emqx_dashboard,emqx_mongo"
+      EMQX_LOADED_PLUGINS: "emqx_recon,emqx_retainer,emqx_management,emqx_dashboard,emqx_auth_mongo"
 
-
-    # volumes:
-    #   - vol-emqx-data:/opt/emqx/data
-    #   - vol-emqx-etc:/opt/emqx/etc
-    #   - vol-emqx-log:/opt/emqx/log
-    
-    links: 
-      - mongo
     
 
-
-
+    
