correc detalles en docker-production

--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -1,14 +1,12 @@
 version: "3.8"
 
-#
+
 volumes:
   vol-emqx-data:
     name: foo-emqx-data
-#  vol-emqx-etc:
-#    name: foo-emqx-etc
   vol-emqx-log:
     name: foo-emqx-log
-#
+
 
 
 services:
@@ -25,7 +23,7 @@ services:
       - "3001:3001"
       - "80:3002"
 
-    link:
+    links:
       - emqx
       - mongo
 
@@ -57,10 +55,9 @@ services:
 
     volumes:
       - vol-emqx-data:/opt/emqx/data
-    #   - vol-emqx-etc:/opt/emqx/etc
       - vol-emqx-log:/opt/emqx/log
-      -             :/app/index.js
-    #
+      
+    
 
     links:
       - mongo
