Se modificó para preproducción docker-comose y agregó un docker install

--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -10,10 +10,10 @@ services:
   node:
     container_name: node
     image: "node:14"
-    restart: always
+    #restart: always
     working_dir: /home/node/app
     volumes:
-      - ./mycode/index.js:/home/node/app/index.js
+      - ./app/:/home/node/app
 
     ports:
       - "3000:3000"
@@ -24,12 +24,13 @@ services:
       - emqx
       - mongo
 
-    command: sh -c "node index.js"
+    command: sh -c "npm run build && npm run start"
+    #command: sh -c "npm install"
 
   mongo:
     container_name: mongo
     image: mongo:4.4
-    restart: always
+    #restart: always
     environment:
       TZ: "${TZ}"
       MONGO_INITDB_ROOT_USERNAME: "${MONGO_USERNAME}"
@@ -42,7 +43,7 @@ services:
   emqx:
     container_name: emqx
     image: emqx/emqx:4.2.3
-    restart: always
+    #restart: always
     ports:
       - 18083:18083
       - 1883:1883
