--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -18,19 +18,21 @@ services:
     ports:
       - "3000:3000"
       - "3001:3001"
-      - "81:3002"
+      - "80:3002"
 
     links:
       - emqx
       - mongo
 
-    command: sh -c "npm run build && npm run start"
-    #command: sh -c "npm install"
+    command: sh -c "echo 'delaying 30 seconds' && sleep 30 && npm run start"
+    
 
   mongo:
     container_name: mongo
     image: mongo:4.4
     #restart: always
+    #logging:
+     # driver: "none" 
     environment:
       TZ: "${TZ}"
       MONGO_INITDB_ROOT_USERNAME: "${MONGO_USERNAME}"
@@ -48,7 +50,7 @@ services:
       - 18083:18083
       - 1883:1883
       - 8883:8883
-      - 8093:8083
+      - 8083:8083
       - 8085:8081
 
     volumes:
