--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -16,9 +16,9 @@ services:
       - ./app/:/home/node/app
 
     ports:
-      - "3000:3000"
-      - "3001:3001"
-      - "81:3002"
+      - ${FRONT_PORT}:${FRONT_PORT}
+      - ${API_PORT}:${API_PORT}
+      - 80:3002
 
     links:
       - emqx
