--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -31,8 +31,8 @@ services:
     container_name: mongo
     image: mongo:4.4
     #restart: always
-    #logging:
-     # driver: "none" 
+    logging:
+      driver: "none" 
     environment:
       TZ: "${TZ}"
       MONGO_INITDB_ROOT_USERNAME: "${MONGO_USERNAME}"
@@ -112,10 +112,10 @@ services:
       EMQX_LOADED_PLUGINS: "emqx_recon,emqx_retainer,emqx_management,emqx_dashboard,emqx_auth_mongo"
       EMQX_LISTENER__TCP__EXTERNAL__MAX_CONNECTIONS: 1000
       EMQX_LISTENER__SSL__EXTERNAL__KEYFILE: "etc/certs/emqx.key"
-      EMQX_LISTENER__SSL__EXTERNAL__CERTFILE: "etc/certs/emqx.crt"
-      #EMQX_LISTENER__SSL__EXTERNAL__CACERTFILE: "etc/certs/ca.pem"
+      EMQX_LISTENER__SSL__EXTERNAL__CERTFILE: "etc/certs/emqx.pem"
+      EMQX_LISTENER__SSL__EXTERNAL__CACERTFILE: "etc/certs/ca.pem"
       
       #wss
-      #EMQX_LISTENER__WSS__EXTERNAL__CACERTFILE: "etc/certs/ca.pem" 
+      EMQX_LISTENER__WSS__EXTERNAL__CACERTFILE: "etc/certs/ca.pem" 
       EMQX_LISTENER__WSS__EXTERNAL__CERTFILE: "etc/certs/emqx.pem"
       EMQX_LISTENER__WSS__EXTERNAL__KEYFILE: "etc/certs/emqx.key"
