--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -16,10 +16,10 @@ services:
       - ./app/:/home/node/app
 
     ports:
-      - ${FRONT_PORT}:${FRONT_PORT}
-      - ${API_PORT}:${API_PORT}
-      - 80:3002
-
+      - ${FRONT_PORT_O}:${FRONT_PORT_I}
+      - ${API_PORT_O}:${API_PORT_I}
+      - ${REDIRECT_PORT_O}:${REDIRECT_PORT_I}
+      - ${WSS_PORT_O}:${WSS_PORT_I}
     links:
       - emqx
       - mongo
@@ -40,19 +40,20 @@ services:
     volumes:
       - ./mongodata:/data/db
     ports:
-      - ${MONGO_EXT_PORT}:27017
+      - ${MONGO_PORT_O}:${MONGO_PORT_I}
 
   emqx:
     container_name: emqx
     image: emqx/emqx:4.2.3
     #restart: always
     ports:
-      - 18083:18083
-      - 1883:1883
-      - 8883:8883
-      - 8083:8083
-      - 8085:8081
-      - 8084:8084
+      - ${EMQX_DASH_PORT_O}:${EMQX_DASH_PORT_I}
+      - ${EMQX_TCP_PORT_O}:${EMQX_TCP_PORT_I}
+      - ${EMQX_TLS_PORT_O}:${EMQX_TLS_PORT_I}
+      - ${EMQX_WS_PORT_O}:${EMQX_WS_PORT_I}
+      - ${EMQX_WSS_PORT_O}:${EMQX_WSS_PORT_I}
+      - ${EMQX_API_PORT_O}:${EMQX_API_PORT_I}
+
 
     volumes:
       - vol-emqx-data:/opt/emqx/data
@@ -84,7 +85,7 @@ services:
       EMQX_AUTH__MONGO__TOPOLOGY__POOL_SIZE: 1
       EMQX_AUTH__MONGO__TOPOLOGY__MAX_OVERFLOW: 0
 
-      EMQX_AUTH__MONGO__SERVER: "mongo:${MONGO_EXT_PORT}"
+      EMQX_AUTH__MONGO__SERVER: "mongo:${MONGO_PORT_I}"
       EMQX_AUTH__MONGO__POOL: 8
 
       EMQX_AUTH__MONGO__LOGIN: "${MONGO_USERNAME}"
