--- a/docker_nuxt_build.yml
+++ b/docker_nuxt_build.yml
@@ -9,6 +9,6 @@ services:
     working_dir: /home/node/app
     volumes:
       - ./app/:/home/node/app
-
+      - ./certs:/home/node/app/certs
 
     command: sh -c "npm run build"
